--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,26 @@
 @import "~@blueprintjs/table/lib/css/table.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
 
+/* Sidebar */
+.sidebar {
+  position: fixed;
+  width: 300px;
+  height: 100%;
+  background-color: #30404D;
+}
+
+.page-content {
+  position: relative;
+  width: calc(100% - 300px);
+  height: 100%;
+  float: right;
+}
+
+/* Toolbar */
+.toolbar {
+  background-color: #EBF1F5;
+}
+
 table{
   width:100%;
   table-layout: fixed;
@@ -11,17 +31,23 @@ table{
   background-color: rgba(255,255,255,0.3);
 }
 .tbl-content{
-  height:300px;
+  /* height:300px; */
   overflow-x:auto;
   margin-top: 0px;
-  border: 2px solid rgba(255,255,255,0.3);
+  /* border: 1px solid black; */
 }
+
+thead tr{
+  -webkit-box-shadow: 0px 1px 1px 0px rgba(206,217,224,1);
+  -moz-box-shadow: 0px 1px 1px 0px rgba(206,217,224,1);
+  box-shadow: 0px 1px 1px 0px rgba(206,217,224,1);
+
+  font-size: 12px;
+}
+
 th{
   padding: 20px 15px;
   text-align: left;
-  font-weight: 500;
-  font-size: 12px;
-  color: #000;
   text-transform: uppercase;
 }
 td{
@@ -31,5 +57,5 @@ td{
   font-weight: 300;
   font-size: 12px;
   color: #000;
-  border-bottom: solid 1px rgba(255,255,255,0.1);
+  border-bottom: solid 1px #CED9E0;
 }
