--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,15 @@ th{
   text-align: left;
   text-transform: uppercase;
 }
+
+tr {
+  cursor: pointer;
+}
+
+tr:hover {
+  background-color: #EBF1F5;
+}
+
 td{
   padding: 15px;
   text-align: left;
