--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@
   background-color: #30404D;
 }
 
+.sidebar input {
+  background-color: rgb(29, 39, 44);
+  color: white;
+}
+
 .page-content {
   position: relative;
   width: calc(100% - 300px);
@@ -21,23 +26,25 @@
 /* Toolbar */
 .toolbar {
   background-color: #EBF1F5;
+  color: white;
 }
 
-table{
+#patient-table table{
   width:100%;
   table-layout: fixed;
 }
-.tbl-header{
+
+#patient-table .tbl-header{
   background-color: rgba(255,255,255,0.3);
 }
-.tbl-content{
+#patient-table .tbl-content{
   /* height:300px; */
   overflow-x:auto;
   margin-top: 0px;
   /* border: 1px solid black; */
 }
 
-thead tr{
+#patient-table thead tr{
   -webkit-box-shadow: 0px 1px 1px 0px rgba(206,217,224,1);
   -moz-box-shadow: 0px 1px 1px 0px rgba(206,217,224,1);
   box-shadow: 0px 1px 1px 0px rgba(206,217,224,1);
@@ -45,21 +52,21 @@ thead tr{
   font-size: 12px;
 }
 
-th{
+#patient-table th{
   padding: 20px 15px;
   text-align: left;
   text-transform: uppercase;
 }
 
-tr {
+#patient-table tr {
   cursor: pointer;
 }
 
-tr:hover {
+#patient-table tr:hover {
   background-color: #EBF1F5;
 }
 
-td{
+#patient-table td{
   padding: 15px;
   text-align: left;
   vertical-align:middle;
@@ -67,4 +74,9 @@ td{
   font-size: 12px;
   color: #000;
   border-bottom: solid 1px #CED9E0;
+}
+
+#patient-info tr td:first-child {
+  font-weight: bold;
+  padding-right: 20px;
 }
