--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@
 }
 
 #patient-table tr {
-  cursor: pointer;
+  /* cursor: pointer; No more pointer, using checkbox now */ 
 }
 
 #patient-table tr:hover {
@@ -69,7 +69,6 @@
   padding: 15px;
   text-align: left;
   vertical-align:middle;
-  font-weight: 300;
   font-size: 12px;
   color: #000;
   border-bottom: solid 1px #CED9E0;
