--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@
   margin-bottom: 20px;
 }
 
-#chart {
+#chart, #blood-pressure-history {
   margin-top: 30px;
 }
 
@@ -128,4 +128,8 @@
 
 .history-card-content > div:first-of-type {
   border-right: 1px solid rgba(16,22,26,.15)
+}
+
+.text-center {
+  text-align: center;
 }
